# hyperx

./: .gitignore  App.cpp  App.hpp  CMakeLists.txt  Initializer.cpp  Initializer.hpp  LICENSE  Object.cpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shape.hpp  Texture.cpp  Texture.hpp  Warehouse.cpp  Warehouse.hpp  Window.cpp  Window.hpp  hyperx.cpp
logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
sdl2/: CMakeLists.txt
